# GetItCore

./: .gitignore  CMakeLists.txt  GetItCore  getitcore.pc.in
docs/: GetItCore_uml.xmi
include/: Cookie  RawRequest  ResponseListener
src/: Cookie.cpp  Cookie.h  Cookie.hpp  FileFormdata.cpp  FileFormdata.h  FormdataRequest.cpp  FormdataRequest.h  FormdataRequest.hpp  GetItCore.cpp  GetItCore.hpp  Header.cpp  Header.h  Header.hpp  ICookie.h  IFormdata.h  IHeader.h  IRequest.h  IRequestListener.h  IResponse.h  RawRequest.cpp  RawRequest.hpp  Request.cpp  Request.hpp  Response.cpp  Response.h  ResponseListener.hpp  TextFormdata.cpp  TextFormdata.h  main.cpp
